src/test/ui/parser/doc-comment-in-if-statement.stderr
error: expected `{`, found doc comment `/*!*/`
  --> $DIR/doc-comment-in-if-statement.rs:2:13
   |
LL |     if true /*!*/ {}
   |     --      ^^^^^ -- help: try placing this code inside a block: `{ { } }`
   |     |       |
   |     |       expected `{`
   |     this `if` statement has a condition, but no block

error: aborting due to previous error

